package br.com.fiap.space.domain.exception;

public class BateriaCriticaException extends Exception {
    public BateriaCriticaException(String message) {
        super(message);
    }
}
