package br.com.fiap.space.domain.exception;

public class CargaExcedidaException extends Exception {
    public CargaExcedidaException(String message) {
        super(message);
    }
}
