package br.com.fiap.space.domain.exception;

public class TerrenoInvalidoException extends Exception {
    public TerrenoInvalidoException(String message) {
        super(message);
    }
}
