package br.com.fiap.space.domain.interfaces;

public interface Recarregavel {
    void conectarBase();
}
